--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="col">
           <h1>Controls</h1>
           <button id='play-pause'></button>
-          <p>Social distaning</p>
+          <button id='reset'></button>
+          <h3>Social distaning</h3>
+          <p>(left: people party all the time, right: people live isolated)</p>
           <div class="slidecontainer">
             <input type="range" min="1" max="100" value="50" class="slider" id="slider-social-distancing">
           </div>
