--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Epidemy simulator.</title>
+    <title>My Rust + Webpack project!</title>
   </head>
   <body>
     <div class="container">
@@ -13,8 +13,7 @@
         <div class="col">
           <h1>Controls</h1>
           <button id='play-pause'></button>
-          <h3>Social distaning</h3>
-          <p>(left: people party all the time, right: people live isolated)</p>
+          <p>Social distaning</p>
           <div class="slidecontainer">
             <input type="range" min="1" max="100" value="50" class="slider" id="slider-social-distancing">
           </div>
