Fix confusions (revert axis), some explanation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <div class="col">
           <h1>Controls</h1>
           <button id='play-pause'></button>
-          <p>Social distaning</p>
+          <h3>Social distancing</h3>
+          <p>Left: everybody parties. Right: nobody leaves the house.</p>
           <div class="slidecontainer">
             <input type="range" min="1" max="100" value="50" class="slider" id="slider-social-distancing">
           </div>
