Adding reset button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         </div>
         <div class="col">
           <h1>Controls</h1>
-          <button id='play-pause'></button>
+          <button id='button-play-pause'></button>
+          <button id='button-restart'>↺</button>
           <h3>Social distancing</h3>
           <p>Left: everybody parties. Right: nobody leaves the house.</p>
           <div class="slidecontainer">
