--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
         <div class="col">
           <canvas id='canvas-new_infections'></canvas>
         </div>
-        <div class="col"></div>
+        <div class="col">
+          <h1>Instructions</h1>
+          <p>Press ▶ / ⏸ to play / pause.</p>
+          <p>Press the '↺' button to restart.</p>
+          <p>Change the social distancing slider during the simulation to see the effect (but watch out, if it's too late, it's too late).</p>
+        </div>
       </div>
     </div>
     <script src="index.js"></script>
