Adding log plot

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         </div>
         <div class="w-100"></div>
         <div class="col">
+          <canvas id='canvas-infected-log'></canvas>
+        </div>
+        <div class="w-100"></div>
+        <div class="col">
           <canvas id='canvas-new_infections'></canvas>
         </div>
         <div class="col">
