--- a/snomb/index.html
+++ b/snomb/index.html
@@ -22,8 +22,8 @@
   </head>
 
   <script type="module">
-    import init from "./snomb.js";
-    init("./snomb_bg.wasm").then(function (wasm) {
+    import init from "./snomblib.js";
+    init("./snomblib_bg.wasm").then(function (wasm) {
         console.log(wasm);
       wasm.run();
     });
